# tauri-drive

./: CONTRIBUTING.md  DEVELOPMENT.md  README.md  ROADMAP.md  SPECS.md  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.ts
.github/workflows/: build.yml  test.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/migration/: mod.rs
src-tauri/src/r2/: client.rs  mod.rs  multipart.rs  operations.rs
src-tauri/src/upload/: manager.rs  mod.rs
src-tauri/src/utils/: types.rs
src/components/: ConfirmDialog.svelte  CreateFolderDialog.svelte  FilePreviewModal.svelte  RenameDialog.svelte  UpdateScreen.svelte  VirtualList.svelte
src/components/transfers/: DownloadQueue.svelte  UploadQueue.svelte
src/lib/stores/: uploads.test.ts  uploads.ts
src/lib/types/: index.ts
src/lib/utils/: folderParser.test.ts  folderParser.ts  formatters.test.ts  formatters.ts
src/routes/: +layout.ts  Browser.svelte  Settings.svelte  SyncFolders.svelte  Transfers.svelte
src/test/: setup.ts
