[package]
name = "cloudflare-backup"
version = "0.1.0"
description = "Cloudflare R2 Backup Application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cloudflare_backup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
notify = "6"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
# Encryption for credentials
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
# Concurrency
futures = "0.3"
# Logging
log = "0.4"
env_logger = "0.11"
# Zip support for folder downloads
zip = "2"
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tempfile = "3.23.0"

